--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.3",
-    "mongoose": "^5.13.7"
+    "mongoose": "^5.13.7",
+    "nodemon": "^2.0.12"
   },
   "repository": {
     "type": "git",
